BeamableServices/services/StepH-Flow/EventScript/EventScriptParser.cs
#pragma warning disable CS1591 // Missing XML comment for publicly visible type or member

using System;
using System.Collections.Generic;
using System.Globalization;
using System.Linq;
using static StepH.Flow.EventScript.EventScriptTokenKind;

namespace StepH.Flow.EventScript;

public sealed class EventScriptParser
{
    private static readonly HashSet<string> KnownTypeNames = new(StringComparer.Ordinal)
    {
        "tag",
        "text",
        "percentage",
        "decimal",
        "integer",
        "boolean",
        "optional",
        "list",
        "dictionary",
        "set",
        "dice",
        "nothing"
    };

    private static readonly HashSet<string> CollectionCombineOperators = new(StringComparer.Ordinal)
    {
        "intersect",
        "combine",
        "merge",
        "except",
        "zip"
    };

    private readonly IReadOnlyList<EventScriptToken> _tokens;
    private int _index;

    private EventScriptParser(IReadOnlyList<EventScriptToken> tokens)
    {
        _tokens = tokens;
    }

    public static EventScriptProgram Parse(string script)
    {
        var lexer = new EventScriptLexer(script);
        var tokens = lexer.Tokenize();
        return new EventScriptParser(tokens).ParseProgram();
    }

    private EventScriptProgram ParseProgram()
    {
        var typeDefinitions = new List<TypeDefinitionNode>();
        var handlers = new List<EventHandlerNode>();
        SkipStatementSeparators();
        while (!Is(EndOfFile))
        {
            if (Match(Record))
            {
                typeDefinitions.Add(ParseTypeDefinition());
            }
            else
            {
                handlers.Add(ParseEventHandler());
            }

            RequireHandlerSeparatorOrEndOfFile();
            SkipStatementSeparators();
        }

        return new EventScriptProgram(typeDefinitions, handlers);
    }

    private TypeDefinitionNode ParseTypeDefinition()
    {
        var name = ParseTypeName();
        Expect(As);
        SkipNewLines();
        Expect(LeftBrace);
        SkipStatementSeparators();

        var fields = new List<TypeFieldDefinitionNode>();
        while (!Is(RightBrace))
        {
            fields.Add(ParseTypeFieldDefinition());
            if (Match(Comma))
            {
                SkipStatementSeparators();
                continue;
            }

            SkipStatementSeparators();
        }

        Expect(RightBrace);
        return new TypeDefinitionNode(name, fields);
    }

    private TypeFieldDefinitionNode ParseTypeFieldDefinition()
    {
        var name = ExpectIdentifierLike();
        Expect(Colon);
        SkipNewLines();
        var typeName = ParseTypeName();
        SkipNewLines();

        ExpressionNode? minimumExpression = null;
        ExpressionNode? maximumExpression = null;
        ExpressionNode? computedExpression = null;

        if (MatchWord("clamped"))
        {
            ExpectWord("between");
            minimumExpression = ParseEqualityExpression();
            Expect(And);
            maximumExpression = ParseEqualityExpression();
            SkipNewLines();
        }

        if (MatchWord("computed"))
        {
            ExpectWord("by");
            computedExpression = ParseExpression();
        }

        return new TypeFieldDefinitionNode(name, typeName, minimumExpression, maximumExpression, computedExpression);
    }

    private EventHandlerNode ParseEventHandler()
    {
        Expect(On);
        var message = Expect(Message).Text;

        var parameters = new List<string>();
        if (Match(LeftParen))
        {
            if (!Is(RightParen))
            {
                parameters.Add(ExpectIdentifierLike());
                while (Match(Comma))
                {
                    parameters.Add(ExpectIdentifierLike());
                }
            }

            Expect(RightParen);
        }

        SkipNewLines();
        Expect(LeftBrace);
        var statements = ParseStatementsUntil(RightBrace);
        Expect(RightBrace);

        return new EventHandlerNode(message, parameters, statements);
    }

    private IReadOnlyList<StatementNode> ParseStatementsUntil(EventScriptTokenKind closingKind)
    {
        var statements = new List<StatementNode>();
        SkipStatementSeparators();

        while (!Is(closingKind))
        {
            if (Is(EndOfFile))
            {
                var token = Current;
                throw new EventScriptParseException($"Expected '{closingKind}' before end of input", token.Line, token.Column);
            }

            statements.Add(ParseStatement());
            RequireStatementSeparatorOrClosing(closingKind);
        }

        return statements;
    }

    private StatementNode ParseStatement()
    {
        if (Match(Publish))
        {
            return ParsePublishStatement();
        }

        if (Match(Let))
        {
            return ParseLetStatement();
        }

        if (Match(If))
        {
            return ParseIfStatement();
        }

        if (Match(For))
        {
            return ParseForStatement();
        }

        var expression = ParseExpression();
        return new ExpressionStatementNode(expression);
    }

    private PublishStatementNode ParsePublishStatement()
    {
        var message = Expect(Message).Text;
        var arguments = new List<ExpressionNode>();

        if (Match(LeftParen))
        {
            if (!Is(RightParen))
            {
                arguments.Add(ParseExpression());
                while (Match(Comma))
                {
                    arguments.Add(ParseExpression());
                }
            }

            Expect(RightParen);
        }

        return new PublishStatementNode(message, arguments);
    }

    private LetStatementNode ParseLetStatement()
    {
        var identifier = ExpectIdentifierLike();
        string? declaredType = null;
        if (Match(As))
        {
            SkipNewLines();
            declaredType = ParseTypeName();
        }

        if (Match(Be)) return new LetStatementNode(identifier, declaredType, ParseExpression());
        var token = Current;
        throw new EventScriptParseException($"Expected {Be} but found {token.Kind}", token.Line, token.Column);
    }

    private IfStatementNode ParseIfStatement()
    {
        var condition = ParseExpression();
        SkipNewLines();
        Expect(LeftBrace);
        var thenStatements = ParseStatementsUntil(RightBrace);
        Expect(RightBrace);

        var elseStatements = new List<StatementNode>();
        SkipNewLines();
        if (Match(Else))
        {
            SkipNewLines();
            Expect(LeftBrace);
            elseStatements.AddRange(ParseStatementsUntil(RightBrace));
            Expect(RightBrace);
        }

        return new IfStatementNode(condition, thenStatements, elseStatements);
    }

    private ForStatementNode ParseForStatement()
    {
        var identifier = ExpectIdentifierLike();
        Expect(In);
        var source = ParseExpression();
        SkipNewLines();
        Expect(LeftBrace);
        var statements = ParseStatementsUntil(RightBrace);
        Expect(RightBrace);
        return new ForStatementNode(identifier, source, statements);
    }

    private ExpressionNode ParseExpression() => ParseGuardedChoiceExpression();

    private ExpressionNode ParseGuardedChoiceExpression()
    {
        var expression = ParseDefaultExpression();
        if (Match(When))
        {
            var branches = new List<GuardedChoiceBranchNode>();
            var conditionExpression = ParseDefaultExpression();
            branches.Add(new GuardedChoiceBranchNode(expression, conditionExpression));

            while (Match(Comma))
            {
                SkipNewLines();
                if (Is(Otherwise))
                {
                    break;
                }

                Match(Or);
                SkipNewLines();

                var branchValue = ParseDefaultExpression();
                SkipNewLines();
                Expect(When);
                SkipNewLines();
                var branchCondition = ParseDefaultExpression();
                branches.Add(new GuardedChoiceBranchNode(branchValue, branchCondition));
            }

            SkipNewLines();
            Expect(Otherwise);
            SkipNewLines();
            var otherwiseExpression = ParseDefaultExpression();
            expression = new GuardedChoiceExpressionNode(branches, otherwiseExpression);
        }

        return expression;
    }

    private ExpressionNode ParseDefaultExpression()
    {
        var expression = ParseCollectionCombineExpression();

        while (Current.Kind == Tag && string.Equals(Current.Text, ":default", StringComparison.Ordinal))
        {
            Advance();
            var op = "default";
            SkipNewLines();
            var right = ParseCollectionCombineExpression();
            expression = new BinaryExpressionNode(expression, op, right);
        }

        return expression;
    }

    private ExpressionNode ParseCollectionCombineExpression()
    {
        var expression = ParseOrExpression();

        while (Current.Kind == Tag &&
               CollectionCombineOperators.Contains(Current.Text[1..]))
        {
            var op = Current.Text[1..];
            Advance();
            SkipNewLines();
            var right = ParseOrExpression();
            expression = new BinaryExpressionNode(expression, op, right);
        }

        return expression;
    }

    private ExpressionNode ParseOrExpression()
    {
        var expression = ParseAndExpression();

        while (Match(Or))
        {
            var op = "||";
            SkipNewLines();
            var right = ParseAndExpression();
            expression = new BinaryExpressionNode(expression, op, right);
        }

        return expression;
    }

    private ExpressionNode ParseAndExpression()
    {
        var expression = ParseEqualityExpression();

        while (Match(And))
        {
            var op = "&&";
            SkipNewLines();
            var right = ParseEqualityExpression();
            expression = new BinaryExpressionNode(expression, op, right);
        }

        return expression;
    }

    private ExpressionNode ParseEqualityExpression()
    {
        var expression = ParseMembershipExpression();

        while (Match(Equal, NotEqual))
        {
            var op = Previous.Text;
            SkipNewLines();
            var right = ParseMembershipExpression();
            expression = new BinaryExpressionNode(expression, op, right);
        }

        return expression;
    }

    private ExpressionNode ParseMembershipExpression()
    {
        var expression = ParseTypeOperationExpression();

        while (true)
        {
            if (Match(In))
            {
                var op = Previous.Text;
                SkipNewLines();
                var right = ParseTypeOperationExpression();
                expression = new BinaryExpressionNode(expression, op, right);
                continue;
            }

            if (IsValueInOperator())
            {
                Advance();
                SkipNewLines();
                Expect(In);
                var op = "value in";
                SkipNewLines();
                var right = ParseTypeOperationExpression();
                expression = new BinaryExpressionNode(expression, op, right);
                continue;
            }

            if (Match(Starts))
            {
                SkipNewLines();
                Expect(With);
                var op = "starts with";
                SkipNewLines();
                var right = ParseTypeOperationExpression();
                expression = new BinaryExpressionNode(expression, op, right);
                continue;
            }

            if (Match(Ends))
            {
                SkipNewLines();
                Expect(With);
                var op = "ends with";
                SkipNewLines();
                var right = ParseTypeOperationExpression();
                expression = new BinaryExpressionNode(expression, op, right);
                continue;
            }

            break;
        }

        return expression;
    }

    private DicePatternNode ParseDicePattern()
    {
        if (MatchWord("pair"))
        {
            SkipNewLines();
            if (MatchWord("of"))
            {
                SkipNewLines();
                return new DiceCountPatternNode(2, ParsePatternFace());
            }

            return new DiceCountPatternNode(2, null);
        }

        if (MatchWord("three"))
        {
            return ParseOfPattern(3);
        }

        if (MatchWord("four"))
        {
            return ParseOfPattern(4);
        }

        if (MatchWord("five"))
        {
            return ParseOfPattern(5);
        }

        if (MatchWord("six"))
        {
            return ParseOfPattern(6);
        }

        if (MatchWord("seven"))
        {
            return ParseOfPattern(7);
        }

        if (MatchWord("full"))
        {
            SkipNewLines();
            ExpectWord("house");
            return new DiceFullHousePatternNode();
        }

        if (MatchWord("straight"))
        {
            return new DiceStraightPatternNode();
        }

        var token = Current;
        throw new EventScriptParseException($"Expected dice pattern but found {token.Text}", token.Line, token.Column);
    }

    private DicePatternNode ParseOfPattern(int count)
    {
        SkipNewLines();
        ExpectWord("of");
        SkipNewLines();

        if (MatchWord("a"))
        {
            SkipNewLines();
            ExpectWord("kind");
            return new DiceCountPatternNode(count, null);
        }

        return new DiceCountPatternNode(count, ParsePatternFace());
    }

    private ExpressionNode ParsePatternFace() => ParseUnaryExpression();

    private ExpressionNode ParseTypeOperationExpression()
    {
        var expression = ParseRelationalExpression();

        while (true)
        {
            if (Match(EventScriptTokenKind.Is))
            {
                SkipNewLines();
                var typeName = ParseTypeName();
                expression = new TypeCheckExpressionNode(expression, typeName);
                continue;
            }

            if (Match(As))
            {
                SkipNewLines();
                var typeName = ParseTypeName();
                expression = new TypeCastExpressionNode(expression, typeName);
                continue;
            }

            break;
        }

        return expression;
    }

    private ExpressionNode ParseRelationalExpression()
    {
        var expression = ParseAdditiveExpression();

        while (Match(Less, Greater, LessOrEqual, GreaterOrEqual))
        {
            var op = Previous.Text;
            SkipNewLines();
            var right = ParseAdditiveExpression();
            expression = new BinaryExpressionNode(expression, op, right);
        }

        return expression;
    }

    private ExpressionNode ParseAdditiveExpression()
    {
        var expression = ParseMultiplicativeExpression();

        while (Match(Plus, Minus))
        {
            var op = Previous.Text;
            SkipNewLines();
            var right = ParseMultiplicativeExpression();
            expression = new BinaryExpressionNode(expression, op, right);
        }

        return expression;
    }

    private ExpressionNode ParseMultiplicativeExpression()
    {
        var expression = ParseUnaryExpression();

        while (Match(Multiply, Divide, Modulo))
        {
            var op = Previous.Text;
            SkipNewLines();
            var right = ParseUnaryExpression();
            expression = new BinaryExpressionNode(expression, op, right);
        }

        return expression;
    }

    private ExpressionNode ParseUnaryExpression()
    {
        SkipNewLines();
        if (Match(Has))
        {
            SkipNewLines();
            ExpectValueWord();
            SkipNewLines();
            var hasValueOperand = ParseUnaryExpression();
            return new UnaryExpressionNode("has value", hasValueOperand);
        }

        if (Match(Empty))
        {
            SkipNewLines();
            var emptyOperand = ParseUnaryExpression();
            return new UnaryExpressionNode("empty", emptyOperand);
        }

        if (!Match(Not))
        {
            if (!TryParseTaggedUnaryOperator(out var taggedOperator))
            {
                if (MatchTag(":clamp"))
                {
                    return ParseClampExpression();
                }

                if (MatchTag(":min"))
                {
                    return ParseVariadicTaggedExpression("min");
                }

                if (MatchTag(":max"))
                {
                    return ParseVariadicTaggedExpression("max");
                }

                return ParsePostfixExpression();
            }

            SkipNewLines();
            var taggedOperand = ParseUnaryExpression();
            return new UnaryExpressionNode(taggedOperator, taggedOperand);
        }

        var op = Previous.Text;
        if (string.Equals(op, "not", StringComparison.Ordinal))
        {
            op = "!";
        }

        SkipNewLines();
        var operand = ParseUnaryExpression();
        return new UnaryExpressionNode(op, operand);
    }

    private bool TryParseTaggedUnaryOperator(out string op)
    {
        op = string.Empty;
        if (Current.Kind != Tag)
        {
            return false;
        }

        op = Current.Text switch
        {
            ":len" => "len",
            ":chance" => "chance",
            ":keys" => "keys",
            ":values" => "values",
            ":entries" => "entries",
            ":abs" => "abs",
            ":floor" => "floor",
            ":ceil" => "ceil",
            ":round" => "round",
            ":rounddown" => "rounddown",
            ":roundup" => "roundup",
            ":roundeven" => "roundeven",
            _ => string.Empty
        };

        if (string.IsNullOrEmpty(op))
        {
            return false;
        }

        Advance();
        return true;
    }

    private ExpressionNode ParsePostfixExpression()
    {
        var expression = ParsePrimaryExpression();

        while (true)
        {
            if (Match(Dot))
            {
                SkipNewLines();
                var member = ExpectIdentifierLike();
                expression = new MemberAccessExpressionNode(expression, member);
                continue;
            }

            if (Match(LeftBracket))
            {
                SkipNewLines();
                var selector = ParseCollectionSelector();
                SkipNewLines();
                Expect(RightBracket);
                expression = new CollectionAccessExpressionNode(expression, selector);
                continue;
            }

            return expression;
        }
    }

    private CollectionSelectorNode ParseCollectionSelector()
    {
        SkipNewLines();
        if (Match(SelectorAny, SelectorAll))
        {
            var op = Previous.Kind == SelectorAny ? "any" : "all";
            var identifier = ExpectIdentifierLike();
            ExpectWord("where");
            var predicate = ParseExpression();
            return new PredicateSelectorNode(op, identifier, predicate);
        }

        if (Match(SelectorHas))
        {
            SkipNewLines();
            if (Is(LeftBracket))
            {
                return new ObjectMatchSelectorNode(ParseObjectMatchPattern());
            }

            return new PatternSelectorNode(ParseDicePattern());
        }

        if (Match(SelectorTake))
        {
            return ParseTakeSelector();
        }

        if (Match(SelectorDrop))
        {
            return ParseDropSelector();
        }

        if (Match(SelectorCount))
        {
            var identifier = ExpectIdentifierLike();
            ExpectWord("where");
            var predicate = ParseExpression();
            return new CountSelectorNode(identifier, predicate);
        }

        if (Match(SelectorChoose))
        {
            return ParseChooseSelector();
        }

        if (Match(SelectorDraw))
        {
            SkipNewLines();
            var countToken = Expect(Number);
            return new DrawSelectorNode(ParsePositiveInteger(countToken, "draw count"));
        }

        if (Match(SelectorShuffle))
        {
            return new ShuffleSelectorNode();
        }

        if (Match(SelectorReverse))
        {
            return new ReverseSelectorNode();
        }

        if (MatchTag(":first"))
        {
            return ParseEdgeSelector("first");
        }

        if (MatchTag(":last"))
        {
            return ParseEdgeSelector("last");
        }

        if (MatchTag(":single"))
        {
            return ParseEdgeSelector("single");
        }

        if (Match(SelectorFilter))
        {
            var identifier = ExpectIdentifierLike();
            ExpectWord("where");
            var predicate = ParseExpression();
            return new FilterSelectorNode(identifier, predicate);
        }

        if (Match(SelectorSum))
        {
            var identifier = ExpectIdentifierLike();
            Expect(Arrow);
            var projection = ParseExpression();
            return new SumSelectorNode(identifier, projection);
        }

        if (Match(SelectorAverage))
        {
            var identifier = ExpectIdentifierLike();
            Expect(Arrow);
            var projection = ParseExpression();
            return new AverageSelectorNode(identifier, projection);
        }

        if (MatchTag(":min"))
        {
            return ParseProjectionSelector("min");
        }

        if (MatchTag(":max"))
        {
            return ParseProjectionSelector("max");
        }

        if (MatchTag(":highest"))
        {
            return ParseProjectionSelector("highest");
        }

        if (MatchTag(":lowest"))
        {
            return ParseProjectionSelector("lowest");
        }

        if (Match(SelectorSelect))
        {
            var identifier = ExpectIdentifierLike();
            Expect(Arrow);
            var projection = ParseExpression();
            return new SelectSelectorNode(identifier, projection);
        }

        if (Match(SelectorContains))
        {
            return ParseContainsSelector();
        }

        if (MatchTag(":distinct"))
        {
            return ParseDistinctSelector();
        }

        if (MatchTag(":group"))
        {
            return ParseGroupBySelector();
        }

        if (Match(SelectorSort))
        {
            return ParseSortSelector();
        }

        if (MatchTag(":order"))
        {
            return ParseOrderBySelector();
        }

        return new ExpressionSelectorNode(ParseExpression());
    }

    private string ParseSortDirection()
    {
        SkipNewLines();
        if (MatchWord("ascending"))
        {
            return "ascending";
        }

        if (MatchWord("descending"))
        {
            return "descending";
        }

        var token = Current;
        throw new EventScriptParseException($"Expected sort direction but found {token.Text}", token.Line, token.Column);
    }

    private CollectionSelectorNode ParseSortSelector()
    {
        SkipNewLines();
        return new SortSelectorNode(ParseSortDirection(), null, null);
    }

    private CollectionSelectorNode ParseEdgeSelector(string mode)
    {
        SkipNewLines();
        if (Current.Kind != Identifier)
        {
            return new EdgeSelectorNode(mode, null, null);
        }

        var identifier = ExpectIdentifierLike();
        ExpectWord("where");
        var predicate = ParseExpression();
        return new EdgeSelectorNode(mode, identifier, predicate);
    }

    private CollectionSelectorNode ParseOrderBySelector()
    {
        SkipNewLines();
        ExpectWord("by");
        SkipNewLines();
        var identifier = ExpectIdentifierLike();
        Expect(Arrow);
        var projection = ParseExpression();
        var direction = ParseSortDirection();
        return new OrderBySelectorNode(direction, identifier, projection);
    }

    private CollectionSelectorNode ParseProjectionSelector(string op)
    {
        SkipNewLines();
        var identifier = ExpectIdentifierLike();
        Expect(Arrow);
        var projection = ParseExpression();

        return op switch
        {
            "min" or "lowest" => new MinSelectorNode(identifier, projection),
            "max" or "highest" => new MaxSelectorNode(identifier, projection),
            _ => throw new InvalidOperationException($"Unknown projection selector '{op}'")
        };
    }

    private CollectionSelectorNode ParseContainsSelector()
    {
        SkipNewLines();
        if (MatchWord("all"))
        {
            SkipNewLines();
            return new ContainsSelectorNode("all", ParseExpression());
        }

        if (MatchWord("any"))
        {
            SkipNewLines();
            return new ContainsSelectorNode("any", ParseExpression());
        }

        return new ContainsSelectorNode("single", ParseExpression());
    }

    private CollectionSelectorNode ParseDistinctSelector()
    {
        SkipNewLines();
        if (!MatchWord("by"))
        {
            return new DistinctSelectorNode(null, null);
        }

        SkipNewLines();
        var identifier = ExpectIdentifierLike();
        Expect(Arrow);
        var projection = ParseExpression();
        return new DistinctSelectorNode(identifier, projection);
    }

    private CollectionSelectorNode ParseGroupBySelector()
    {
        SkipNewLines();
        ExpectWord("by");
        SkipNewLines();
        var identifier = ExpectIdentifierLike();
        Expect(Arrow);
        var projection = ParseExpression();
        return new GroupBySelectorNode(identifier, projection);
    }

    private ObjectMatchPatternNode ParseObjectMatchPattern()
    {
        Expect(LeftBracket);
        SkipNewLines();
        var entries = new List<ObjectMatchEntryNode>();
        if (!Is(RightBracket))
        {
            entries.Add(ParseObjectMatchEntry());
            while (Match(Comma))
            {
                SkipNewLines();
                entries.Add(ParseObjectMatchEntry());
            }
        }

        SkipNewLines();
        Expect(RightBracket);
        return new ObjectMatchPatternNode(entries);
    }

    private ObjectMatchEntryNode ParseObjectMatchEntry()
    {
        var key = ExpectIdentifierLike();
        Expect(Colon);
        SkipNewLines();
        ObjectMatchValueNode value = Is(LeftBracket)
            ? new ObjectMatchNestedValueNode(ParseObjectMatchPattern())
            : new ObjectMatchExpressionValueNode(ParseExpression());
        return new ObjectMatchEntryNode(key, value);
    }

    private ExpressionNode ParsePrimaryExpression()
    {
        if (MatchTag(":random"))
        {
            return ParseRandomExpression();
        }

        if (MatchTag(":dice"))
        {
            return ParseDiceExpression();
        }

        if (MatchTag(":set"))
        {
            return ParseSetLiteralExpression();
        }

        if (Match(Number))
        {
            return new NumberLiteralExpressionNode(Previous.NumberValue, Previous.Text);
        }

        if (Match(Percentage))
        {
            return new PercentageLiteralExpressionNode(Previous.NumberValue);
        }

        if (Match(Text))
        {
            return new TextLiteralExpressionNode(Previous.Text);
        }

        if (Match(LeftBracket))
        {
            return ParseBracketLiteralExpression();
        }

        if (Match(True))
        {
            return new BooleanLiteralExpressionNode(true);
        }

        if (Match(False))
        {
            return new BooleanLiteralExpressionNode(false);
        }

        if (Current.Kind == Tag)
        {
            var tagToken = Advance();
            return new TagLiteralExpressionNode(tagToken.Text[1..]);
        }

        if (IsIdentifierLike(Current.Kind))
        {
            var identifierToken = Advance();
            return new IdentifierExpressionNode(identifierToken.Text);
        }

        if (Match(LeftParen))
        {
            SkipNewLines();
            var expression = ParseExpression();
            SkipNewLines();
            Expect(RightParen);
            return expression;
        }

        var token = Current;
        throw new EventScriptParseException($"Unexpected token '{token.Text}'", token.Line, token.Column);
    }

    private ExpressionNode ParseBracketLiteralExpression()
    {
        SkipNewLines();
        if (Match(Colon))
        {
            SkipNewLines();
            Expect(RightBracket);
            return new DictionaryLiteralExpressionNode(Array.Empty<DictionaryEntryNode>());
        }

        if (Is(RightBracket))
        {
            Expect(RightBracket);
            return new ListLiteralExpressionNode(Array.Empty<ExpressionNode>());
        }

        return IsDictionaryLiteralEntryStart()
            ? ParseDictionaryLiteralExpression()
            : ParseListLiteralExpression();
    }

    private ListLiteralExpressionNode ParseListLiteralExpression()
    {
        var items = new List<ExpressionNode>();
        SkipNewLines();
        if (!Is(RightBracket))
        {
            items.Add(ParseExpression());
            while (Match(Comma))
            {
                SkipNewLines();
                items.Add(ParseExpression());
            }
        }

        SkipNewLines();
        Expect(RightBracket);
        return new ListLiteralExpressionNode(items);
    }

    private SetLiteralExpressionNode ParseSetLiteralExpression()
    {
        Expect(LeftBracket);
        var items = new List<ExpressionNode>();
        SkipNewLines();
        if (!Is(RightBracket))
        {
            items.Add(ParseExpression());
            while (Match(Comma))
            {
                SkipNewLines();
                items.Add(ParseExpression());
            }
        }

        SkipNewLines();
        Expect(RightBracket);
        return new SetLiteralExpressionNode(items);
    }
